@@ -1,3 +1,6 @@
-AM_CFLAGS = -I$(srcdir)/../include -I$(top_srcdir)/various/adt/include
+AM_CFLAGS = \
+    -I$(srcdir)/../include \
+    -I$(top_srcdir)/various/adt/include \
+	-I$(top_srcdir)/various/util/include
 noinst_LIBRARIES = librline.a
 librline_a_SOURCES = rline.c
