@@ -1,3 +1,7 @@
+  * Fixed a segfault on 64-bit systems in rline.c due to a missing
+    prototype of cgdb_malloc. Thanks to Pietro Cerutti for reporting
+    and diagnosing this one!
+
   * Fixed a bug in the file dialog. When searching for a file,
     and you hit enter to select it, CGDB would sometimes skip to
     the next file that matches and open that file instead.
